# table_sample

./: .gitignore  poetry_install.sh  pyproject.toml
app_main/: asgi.py  settings.py  urls.py  views.py  wsgi.py
data/: tmp7.csv
templates/: base.html  category.html  page1.html  paginate.html  top.html
